<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">사만원</string>
    <string name="version">버전 1.1.14</string>
    <string name="player">사용자</string>
    <string name="cancel">취소</string>
    <string name="back">이전</string>
    <string name="next">다음</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="refresh">새로고침</string>
    <string name="today">오늘</string>
    <string name="name">이름</string>
    <string name="game">게임</string>
    <string name="ranking">순위</string>
    <string name="score">점수</string>
    <string name="handicap">핸디캡</string>
    <string name="fee">금액</string>
    <string name="remain_handicap">남은 핸디캡</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="blank"></string>
    <string name="no_data">-</string>
    <string name="fee_format">###,##0 원</string>
    <string name="ranking_format">0 위</string>
    <string name="avg_ranking_format">0.00 위</string>
    <string name="game_count_format">###,### 회</string>
    <string name="no_game_count">- 회</string>
    <string name="rate_format">##0.00 %</string>
    <string name="no_rate">- %</string>
    <string name="player_count_format">0 명</string>
    <string name="par_three">파 3</string>
    <string name="par_four">파 4</string>
    <string name="par_five">파 5</string>
    <string name="par_six">파 6</string>
    <string name="score_format_par_3_minus_2">-2: Hole in One</string>
    <string name="score_format_par_3_minus_1">-1: Birdie</string>
    <string name="score_format_par_3_even">0: Par</string>
    <string name="score_format_par_3_plus_1">+1: Bogey</string>
    <string name="score_format_par_3_plus_2">+2: D. Bogey</string>
    <string name="score_format_par_3_plus_3">+3: D. Par</string>
    <string name="score_format_par_4_minus_3">-3: Hole in One</string>
    <string name="score_format_par_4_minus_2">-2: Eagle</string>
    <string name="score_format_par_4_minus_1">-1: Birdie</string>
    <string name="score_format_par_4_even">0: Par</string>
    <string name="score_format_par_4_plus_1">+1: Bogey</string>
    <string name="score_format_par_4_plus_2">+2: D. Bogey</string>
    <string name="score_format_par_4_plus_3">+3: T. Bogey</string>
    <string name="score_format_par_4_plus_4">+4: D. Par</string>
    <string name="score_format_par_5_minus_4">-4: Hole in One</string>
    <string name="score_format_par_5_minus_3">-3: Albatross</string>
    <string name="score_format_par_5_minus_2">-2: Eagle</string>
    <string name="score_format_par_5_minus_1">-1: Birdie</string>
    <string name="score_format_par_5_even">0: Par</string>
    <string name="score_format_par_5_plus_1">+1: Bogey</string>
    <string name="score_format_par_5_plus_2">+2: D. Bogey</string>
    <string name="score_format_par_5_plus_3">+3: T. Bogey</string>
    <string name="score_format_par_5_plus_4">+4: Q. Bogey</string>
    <string name="score_format_par_5_plus_5">+5: D. Par</string>
    <string name="score_format_par_6_minus_5">-5: Hole in One</string>
    <string name="score_format_par_6_minus_4">-4: Condor</string>
    <string name="score_format_par_6_minus_3">-3: Albatross</string>
    <string name="score_format_par_6_minus_2">-2: Eagle</string>
    <string name="score_format_par_6_minus_1">-1: Birdie</string>
    <string name="score_format_par_6_even">0: Par</string>
    <string name="score_format_par_6_plus_1">+1: Bogey</string>
    <string name="score_format_par_6_plus_2">+2: D. Bogey</string>
    <string name="score_format_par_6_plus_3">+3: T. Bogey</string>
    <string name="score_format_par_6_plus_4">+4: Q. Bogey</string>
    <string name="score_format_par_6_plus_5">+5: S. Bogey</string>
    <string name="score_format_par_6_plus_6">+6: D. Par</string>
    <string name="title_activity_main">사만원</string>
    <string name="title_activity_current_game">오늘 게임</string>
    <string name="title_activity_current_game_new_game">새 게임</string>
    <string name="title_activity_current_game_modify_game_setting">게임 설정 수정</string>
    <string name="title_activity_add_result">결과추가</string>
    <string name="title_activity_modify_result">결과수정</string>
    <string name="title_activity_netshare_client">데이터 가져오기</string>
    <string name="title_activity_personal_statistics">개인 통계</string>
    <string name="title_activity_onegame">지난 게임</string>
    <string name="title_activity_onegame_player_record">개인 기록</string>
    <string name="title_activity_history">이전 기록</string>
    <string name="title_activity_settings">설정</string>
    <string name="menu_new_game">새 게임 시작</string>
    <string name="menu_modify_game">게임 설정 수정</string>
    <string name="menu_add_result">결과 추가</string>
    <string name="menu_save">저장</string>
    <string name="menu_cloud">데이터 서버</string>
    <string name="menu_export">내보내기</string>
    <string name="menu_import">가져오기</string>
    <string name="menu_import_three_month">3개월 정보 가져오기</string>
    <string name="menu_import_this_game">이 게임 가져오기</string>
    <string name="menu_reset">결과 초기화</string>
    <string name="menu_delete">삭제</string>
    <string name="menu_settings">설정</string>
    <string name="dialog_reset">결과 초기화</string>
    <string name="dialog_are_you_sure_to_reset">모든 결과가 지워집니다.\n계속하시겠습니까?</string>
    <string name="dialog_import_current_game">준비 중</string>
    <string name="dialog_import_please_wait">잠시만 기다려 주세요</string>
    <string name="dialog_delete">삭제</string>
    <string name="dialog_export_current_game">현재 게임 내보내기</string>
    <string name="dialog_are_you_sure_to_export_current_game">데이터 서버로 내보내시겠습니까?</string>
    <string name="dialog_export_current_game_please_wait">잠시만 기다려 주세요</string>
    <string name="dialog_are_you_sure_to_delete">모든 결과가 지워집니다.\n계속하시겠습니까?</string>
    <string name="dialog_import_three_month">3개월 자료 가져오기</string>
    <string name="dialog_are_you_sure_to_import_three_month">최근 3개월 자료를 가져오시겠습니까?\n돈이 많이 들 수 있습니다</string>
    <string name="dialog_import_three_month_please_wait">잠시만 기다려 주세요</string>
    <string name="dialog_add_name_title">이름</string>
    <string name="dialog_please_insert_name">이름을 입력하세요</string>
    <string name="activity_main_fragment_current_game_summary">점수표</string>
    <string name="activity_main_fragment_current_game_hole_result">홀별 기록</string>
    <string name="activity_main_fragment_attend_count">최근 3개월</string>
    <string name="activity_main_add_result_button">결과 추가</string>
    <string name="activity_main_import_this_game_button">이 게임 가져오기</string>
    <string name="activity_main_netshare_upload_success">내보내기를 완료했습니다</string>
    <string name="activity_main_netshare_upload_fail">내보내기를 실패했습니다</string>
    <string name="activity_main_netshare_import_success">가져오기를 완료했습니다</string>
    <string name="activity_main_netshare_import_fail">가져오기를 실패했습니다</string>
    <string name="activity_currentgame_title">오늘 게임</string>
    <string name="activity_new_game_page_title_game_setting">게임 설정</string>
    <string name="activity_new_game_page_title_hole_fee_setting">홀 비용 설정</string>
    <string name="activity_new_game_page_title_ranking_fee_setting">순위 비용 설정</string>
    <string name="activity_new_game_page_title_player_setting">플레이어 설정</string>
    <string name="activity_new_game_page_title_handicap_setting">핸디캡 설정</string>
    <string name="activity_new_game_are_you_sure_to_cancel">취소하시겠습니까?</string>
    <string name="activity_modify_game_page_title_game_setting">게임 설정</string>
    <string name="activity_modify_game_page_title_hole_fee_setting">홀 비용 설정</string>
    <string name="activity_modify_game_page_title_ranking_fee_setting">순위 비용 설정</string>
    <string name="activity_modify_game_page_title_player_setting">플레이어 설정</string>
    <string name="activity_modify_game_page_title_handicap_setting">핸디캡 설정</string>
    <string name="activity_modify_game_are_you_sure_to_cancel">취소하시겠습니까?</string>
    <string name="activity_history_fragment_game_result_history">게임 기록</string>
    <string name="activity_history_fragment_player_ranking">개인 기록</string>
    <string name="activity_history_are_you_sure_to_delete">%d개의 기록이 지워집니다.\n계속하시겠습니까?</string>
    <string name="activity_one_game_fragment_summary">정산</string>
    <string name="activity_one_game_fragment_hole_result">홀별 기록</string>
    <string name="activity_one_game_fragment_game_setting">게임 설정</string>
    <string name="activity_onegame_player_record_fragment_summary">요약</string>
    <string name="activity_onegame_player_record_fragment_hole_result">홀별 기록</string>
    <string name="activity_personal_statistics_fragment_summary">요약</string>
    <string name="activity_personal_statistics_fragment_game_result_list">날짜별 기록</string>
    <string name="fragment_onegamesummary_personal_statistics">개인 통계</string>
    <string name="fragment_onegamesummary_current_hole_format">HOLE %d</string>
    <string name="fragment_onegameholeresult_hole_number_format">Hole %1$d (Par %2$d)</string>
    <string name="fragment_onegameholeresult_final_hole_format">Hole %d</string>
    <string name="fragment_onegameholeresult_current_hole_format">Hole %d</string>
    <string name="fragment_onegameholeresult_no_hole_number">-</string>
    <string name="fragment_onegameholeresult_action_mode_hole_format">%d번 홀</string>
    <string name="fragment_onegameholeresult_no_handicap">-</string>
    <string name="fragment_game_setting_title_hole_number">홀 수</string>
    <string name="fragment_game_setting_nine_home">9 홀</string>
    <string name="fragment_game_setting_eighteen_home">18 홀</string>
    <string name="fragment_game_setting_player">플레이어</string>
    <string name="fragment_game_setting_game_fee">게임비</string>
    <string name="fragment_game_setting_game_fee_a">게임비\n(A)</string>
    <string name="fragment_game_setting_extra_fee">추가비용</string>
    <string name="fragment_game_setting_extra_fee_a">추가비용\n(B)</string>
    <string name="fragment_game_setting_ranking_fee">순위 비용</string>
    <string name="fragment_game_setting_ranking_fee_a" tools:ignore="TypographyOther">순위 비용\n(C)</string>
    <string name="fragment_game_setting_total_fee_a">총비용\n(A+B)</string>
    <string name="fragment_game_setting_hole_fee_a">홀비용\n(A+B-C)</string>
    <string name="fragment_game_setting_fee_ranking1">1위 비용</string>
    <string name="fragment_game_setting_fee_ranking2">2위 비용</string>
    <string name="fragment_game_setting_fee_ranking3">3위 비용</string>
    <string name="fragment_game_setting_fee_ranking4">4위 비용</string>
    <string name="fragment_game_setting_fee_ranking5">5위 비용</string>
    <string name="fragment_game_setting_fee_ranking6">6위 비용</string>
    <string name="fragment_game_setting_player_count_spinner_2">2 명</string>
    <string name="fragment_game_setting_player_count_spinner_3">3 명</string>
    <string name="fragment_game_setting_player_count_spinner_4">4 명</string>
    <string name="fragment_game_setting_player_count_spinner_5">5 명</string>
    <string name="fragment_game_setting_player_count_spinner_6">6 명</string>
    <string name="fragment_game_setting_select_player_name">이름 선택</string>
    <string name="fragment_game_setting_default_player_name_1">Player 1</string>
    <string name="fragment_game_setting_default_player_name_2">Player 2</string>
    <string name="fragment_game_setting_default_player_name_3">Player 3</string>
    <string name="fragment_game_setting_default_player_name_4">Player 4</string>
    <string name="fragment_game_setting_default_player_name_5">Player 5</string>
    <string name="fragment_game_setting_default_player_name_6">Player 6</string>
    <string name="fragment_game_setting_game_count_format">%d 경기</string>
    <string name="fragment_game_setting_no_game_count">-</string>
    <string name="fragment_game_setting_hole_handicap">홀 핸디</string>
    <string name="fragment_netshare_client_receive">받기</string>
    <string name="fragment_netshare_client_message_not_avaliable">인터넷에 연결할 수 없습니다</string>
    <string name="fragment_netshare_client_message_receiving">데이터를 받는 중</string>
</resources>