<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/NetShareReceiveData"
        android:alphabeticShortcut="m"
        android:icon="?downloadMenuIcon"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_import"/>
    <item
        android:id="@+id/Save"
        android:alphabeticShortcut="v"
        android:icon="?saveMenuIcon"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_save"/>
    <item
        android:id="@+id/Reset"
        android:alphabeticShortcut="r"
        android:icon="?deleteMenuIcon"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_reset"/>
    <item
        android:id="@+id/Settings"
        android:alphabeticShortcut="s"
        android:icon="?settingMenuIcon"
        android:showAsAction="withText"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/About"
        android:icon="?aboutMenuIcon"
        android:showAsAction="withText"
        android:title="@string/menu_about"/>

</menu>