<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/ButtonPanel"
        style="?attr/borderlessButtonPanel"
        android:layout_alignParentBottom="true" >

        <ImageView
            android:id="@+id/UpperDivider"
            style="?attr/borderlessButtonHorizontalDivider"
            android:contentDescription="@string/blank" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/UpperDivider" >

            <Button
                android:id="@+id/PrevButton"
                style="?attr/borderlessButton"
                android:text="@string/back" />

            <ImageView
                style="?attr/borderlessButtonVerticalDivider"
                android:contentDescription="@string/blank" />

            <Button
                android:id="@+id/NextButton"
                style="?attr/borderlessButton"
                android:text="@string/next" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/DateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonPanel"
        android:background="?attr/stripColor"
        android:gravity="center_vertical|left"
        android:paddingBottom="4dip"
        android:paddingLeft="8dip"
        android:paddingTop="4dip"
        android:textColor="?attr/stripTextColor" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/DateTextView" >

        <android.support.v4.view.PagerTitleStrip
            android:id="@+id/pager_title_strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="?attr/stripColor"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:textColor="?attr/stripTextColor" />
    </android.support.v4.view.ViewPager>

</RelativeLayout>